--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "crypto-js": "^4.2.0",
     "element-plus": "^2.6.2",
     "json-editor-vue3": "^1.1.1",
+    "mitt": "^3.0.1",
+    "simple-mind-map": "^0.9.10",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
