--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "crypto-js": "^4.2.0",
     "element-plus": "^2.6.2",
     "json-editor-vue3": "^1.1.1",
+    "lodash-es": "^4.17.21",
+    "lz-utils-lib": "^1.0.51",
     "mitt": "^3.0.1",
     "simple-mind-map": "^0.9.10",
     "vue": "^3.4.21",
@@ -40,7 +42,8 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.6"
   },
-  "engines": {
-    "node": ">=14.0.0 <=100.0.0"
+  "volta": {
+    "node": "20.14.0",
+    "yarn": "1.1.0"
   }
 }
