--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build --mode development",
     "preview": "vite preview",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "pub": "sh deploy.sh"
   },
   "dependencies": {
     "axios": "^1.6.8",
